# multimodal_rag_application

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  STATUS.md  TODO.md  azure.yaml  context-engineering-workflow.md  docker-compose.yml  locustfile.py  package.json  pyproject.toml  requirements-dev.txt
.claude/: skill-rules.json
.claude/agents/: self-documenter.md  self-documenter.memory.md
.github/: copilot-instructions.md
.github/workflows/: azure-static-web-apps-blue-cliff-0cb263c0f.yml  claude-md-review-prompt.md  claude-review.yml  pages.yml  self-document.yml  update-claude-md.yml
app/: start.sh
claude-md-memory-workflow/: README.md
data/: blog_notes.sqlite  warehouse.sqlite
docs/: hierarchical_agent_teams_template.ipynb
evals/: evaluate.py  evaluate_config.json  evaluate_config_multimodal.json  generate_ground_truth.py  ground_truth.jsonl  ground_truth_multimodal.jsonl  requirements.txt  safety_evaluation.py  verifier_eval.py  verifier_golden.jsonl
infra/: abbreviations.json  main.bicep  main.parameters.json
scripts/: auth_init.sh  copy_prepdocslib.py  fetch_learn.py  load_azd_env.py  manageacl.py  prepdocs.ps1  prepdocs.sh  roles.sh  sampleacls.json  seed_graph.py  seed_warehouse.py  setup_cloud_ingestion.sh
self-documenting-ai-agent/: README.md
site/: index.html
tests/: conftest.py  test_app.py  test_approaches.py  test_graphrag.py  test_prepdocslib_textsplitter.py  test_verifier.py  test_voice.py
(+239 files in other folders)
