[project]
name = "multimodal-rag-application"
version = "0.1.0"
description = "Multimodal RAG: PDF + voice ingestion, GraphRAG, multi-agent QA with Verifier, SchemaFlow SQL agent, LangSmith tracing"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "Robert James"}]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["app/frontend", "site", "infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "e2e: end-to-end Playwright tests",
    "integration: integration tests touching mocked Azure services",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["app/backend"]
omit = ["*/tests/*", "*/prepdocslib/_synced/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
